[package]
name = "grid"
version = "1.0.0"
authors = []
edition = "2018"

[dependencies]
flate2 = { version = "1.0", features = ["rust_backend"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3
debug = false
